updated js for float point  number and fixed the bug of car obj output

--- a/js_exercises/VehiclesFE-natak0/views/index.html
+++ b/js_exercises/VehiclesFE-natak0/views/index.html
@@ -36,10 +36,10 @@
     		<label for="diameter">Wheel Diameter: </label>
     		<input type="" name="diameter" id="diameter">
   		</div>
-		<!--div class="form-wheel">
+		<div class="form-wheel">
     		<label for="wheelBrand">Wheel Brand: </label>
     		<input type="" name="wheelBrand" id="wheelBrand">
-  		</div-->
+  		</div>
 
         <input class="btn" type="submit" value="Add a wheel" id="wheelBtn">
  
